--- a/paginaProd.css
+++ b/paginaProd.css
@@ -23,25 +23,10 @@ body {
     left: 0;
     transition: .5s;
     z-index: 100;
-    background-color: #003686;
+    background-color: #00196A;
 }
 
-#navbar.rolagem {
-    background-color: #003686;
-    
-}
 
-#navbar.rolagem a {
-    color: rgb(255, 255, 255);
-    }
-
-    #navbar.rolagem span {
-        color: rgb(255, 255, 255);
-        }
-
-        #navbar.rolagem svg {
-            color: rgb(255, 255, 255);
-            }
 
 .navbar img {
     background-color: transparent;
@@ -69,9 +54,10 @@ left: 0;
     flex-direction: row;
     color: #ffffff;
     font-size: 23px;
+    cursor: pointer;
 }
 .topicos a:hover {
-    color: #00a2ff;
+    color: #ffffff;
     font-size: 25px;  
 }
 .container{
@@ -91,29 +77,9 @@ header{
     padding: 20px 0;
    
 }
-.iconeCarrinho{
-    position: relative;
-    cursor: pointer;
-}
-
-.iconeCarrinho :hover{
-    color: #00a2ff;
-    cursor: pointer;
-}
-
-.iconeCarrinho span{
-    position: absolute;
-    width: 30px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    color: rgb(255, 255, 255);;
-    top: 70%;
-    right: -20px;
-    cursor: pointer;
-   
+#a-sobreNos{
+    text-decoration: none;
+    color: white;
 }
 
 /*MENU DO PRODUTO OU SEI LA O NOME EU NÃO SEI*/
@@ -122,46 +88,66 @@ header{
     margin-top: 150px;
     
 }
-
 .pagProd{
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 75px;
+}
+.produtoImgInfo{
+    display: flex;
+    justify-content: center;
     align-items: flex-start;
+    gap: 20px;
+    height: 48vh;
+    width: 90%;
+}
+li{
+    margin: 5px 5px ;
+}
+.especificao{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    height: 48vh;
+    width: 75%;
 }
 .imagemProd{
-    filter: drop-shadow(0 0 5px rgb(209, 209, 209));
+    filter: drop-shadow(0 0 5px rgb(199, 199, 199));
     border-radius: 15px;
-    height: 55vh;
-    width: 30%;
+    height: 48vh;
+    width: 38%;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2.1vh;
-    background-color: #fffafa;
+    padding: 2.5vh;
+    background-color: #f9f9f9;
 }
 .imagemProd img{
-    height: 60vh;
-    width: 80%;
+    height: 48vh;
+    width: 60%;
 }
 .infoProd{
     
-    height: 65.6vh;
-    width: 28%;
+    height: 48vh;
+    width: 38%;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
     flex-direction: column;
     gap: 20px;
-    padding: 2.1vh;
+    padding: 2.5vh;
 }
 .infoProd p{
-    font-size: 23px;
+    font-size: 16px;
 }
 .infoProd h1{
-    font-size: 50px;
+    font-size: 32px;
 }
 .infoProd span{
-    font-size: 35px;
+    font-size: 24px;
 }
 
 .precoBtn{
@@ -180,11 +166,13 @@ header{
     background-color: #00196A;
     color: white;
     border: none;
+    cursor: pointer;
 }
 .addCarrinho:hover{
     background-color: white;
     color: #00196A;
     border: solid 1px #00196A;
+    transition: 0.6s;
 }
 
 /*-----------RODAPE---------------*/
@@ -319,6 +307,10 @@ button img{
 #redeSocial{
     height: 55px;
     width: 55px;
+}
+.input-email button{ 
+    background-color: #008CBA;  
+    color: #FFF;
 }
 
 /*BOTÕES DA NAVBAR*/
