--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 body {
     margin: 0;
     font-family: Poppins;
-    background-color: #aaaaaa1c;
+    background-color: #e6e6e6;
 }
 body::-webkit-scrollbar {
     width: 12px;               
@@ -142,6 +142,7 @@ header{
 
 .listaProdutos .item img{
     background-size: cover;
+    filter: drop-shadow(0px 6px 13px #0000007e);
    
 }
 .listaProdutos .item img .sobrepor {
@@ -721,15 +722,6 @@ cover 40%;
 
 
 /* ---------------------------------------------- */
-/* fallback */
-.gradiente{
-    position: absolute;
-    margin-bottom: 131px;
-    border: none;
-    width: 99.8%;
-    height: 30px;
-    background-image:linear-gradient(to bottom, black,#eee,transparent);
-}
 .busca{
 display: flex;
 align-items: center;
@@ -765,7 +757,11 @@ a{
     text-decoration: none;
     color: white;
 }
-
+.item hr{
+    width: 80%;
+    margin-left: 10%;
+    opacity: 20%;
+}
 
 
 
