--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
     background-color: #e6e6e6;
 }
 body::-webkit-scrollbar {
-    width: 12px;               
+    width: 12%;               
   } 
   
   body::-webkit-scrollbar-track {
@@ -31,7 +31,7 @@ body::-webkit-scrollbar {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 90px;
+    height: 12%;
     position: fixed;
     top: 0;
     left: 0;
@@ -59,10 +59,10 @@ body::-webkit-scrollbar {
 
 .navbar img {
     background-color: transparent;
-    margin-top: 16px;
-    margin-left: 90px;
-    width: 160px;
-    height: 50px;  
+    margin-top: 2vh;
+    margin-left: 2vw;
+    width: 15vh;
+    height: 3vw;  
 }
 .banner {
 height: 100vh;
@@ -76,33 +76,34 @@ left: 0;
 }
 
 .navbar .topicos {
-    width: 60%;
-    margin-left: 7.5%;
+    width: 60vw;
+    margin-left: 20vw;
     display: flex;
     justify-content: space-evenly;
     flex-direction: row;
     color: #ffffff;
-    font-size: 23px;
+    font-size: 1.5vw;
+    position: fixed;
 }
 .topicos a:hover {
     color: #00a2ff;
-    font-size: 25px;  
+    font-size: 2vw;  
 }
 .container{
     text-align: center;
-    padding-top: 10px;
+    padding-top: 3%;
     transition: transform .5s;
 }
 
 svg{
-    width: 30px;
+    width: 2vw;
     color: #ffffff;
 }
 header{
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 20px 0;
+    padding: 3% 0;
    
 }
 .iconeCarrinho{
@@ -117,21 +118,16 @@ header{
 
 .iconeCarrinho span{
     position: absolute;
-    width: 30px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     border-radius: 50%;
     color: rgb(255, 255, 255);;
     top: 70%;
-    right: -20px;
+    left: 97.5%;
     cursor: pointer;
    
 }
 
 .listaProdutos{
-    margin: 30px 0px;
+    margin: 2vh 0;
     height: 150vh;
     width: 70vw;
     display: flex;
@@ -166,7 +162,7 @@ header{
 
 .listaProdutos .item{
     background-color: #ffffff;
-    border-radius: 5px;
+    border-radius: 2%;
     height: 35vh;
     width: 15vw;
     -webkit-box-shadow: inset 0px 0px 136px -121px rgba(0,0,0,0.75);
@@ -183,21 +179,21 @@ header{
 }
 
 .listaProdutos .item h2{
-    font-weight: 500;
-    font-size: large;
+    font-size: 1vw;
     color: #00196A;
 }
 .listaProdutos .item .preco{
-    font-size: medium;
+    font-size: 0.9vw;
     color: #00196A;
 }
 .listaProdutos .item button{
     background-color: #00196A;
     color: #eee;
     border: none;
-    padding: 5px 10px;
-    margin-top: 10px;
-    border-radius: 5px;
+    font-size: 1vw;
+    padding: 1% 3%;
+    margin-top:2.5vh;
+    border-radius: 0.5vw;
 
 }
 
@@ -212,16 +208,16 @@ header{
 
 /* cart */
 .tabelaCarrinho{
-    width: 400px;
+    width: 25vw;
     background-color: #ffffff;
     color: #00196A;
-    border: #00196A solid 1px;
+    border: #00196A solid 0.1vw;
     position: fixed;
     top: 0;
-    right: -400px;
+    right: -40vw;
     bottom: 0;
     display: grid;
-    grid-template-rows: 70px 1fr 70px;
+    grid-template-rows: 7vw 1fr 7vw;
     transition: .5s;
     z-index: 101;
     
@@ -234,35 +230,35 @@ body.mostrarCarrinho .tabelaCarrinho{
 
 }
 body.mostrarCarrinho .container{
-    transform: translateX(-250px);
+    transform: translateX(-25vw);
     
 }
 .tabelaCarrinho h1{
     padding: 20px;
     margin: 0;
-    font-weight: 300;
+    font-size: 2vw;
 }
 .tabelaCarrinho .btn{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
 }
 .linha{
-    height: 1px;
-    width: 300px;
+    height: 0.1vh;
+    width: 20vw;
     background-color: #00196A;
-    margin-top: 50px;
+    margin-top: 9vh;
     margin-left: 10%;
 }
 
 .tabelaCarrinho h3{
-    font-size: 23px;
-    margin-left: 40px;
-    margin-bottom: 30px;
+    font-size: 1vw;
+    margin-left: 4vw;
+    margin-bottom: 3vh;
     font-weight: 300;
 }
 #totalCarrinho{
-    margin-top: -8%;
-    margin-left: 200px;
+    margin-top: -5%;
+    margin-left: 3vw;
 }
 
 .tabelaCarrinho .close{
@@ -275,8 +271,9 @@ body.mostrarCarrinho .container{
 
 .listaCarrinho .item{
     display: grid;
-    grid-template-columns: 70px 150px 50px 1fr;
-    gap: 10px;
+    font-size: 1vw;
+    grid-template-columns: 10% 20% 5% 1fr;
+    gap: 4%;
     text-align: center;
     align-items: center;
 }
@@ -286,8 +283,8 @@ body.mostrarCarrinho .container{
 }
 .listaCarrinho .quantidade span{
     display: inline-block;
-    width: 25px;
-    height: 25px;
+    width: 1.6vw;
+    height: 3vh;
     background-color: #eee;
     border-radius: 50%;
     color: #00196A;
@@ -309,35 +306,21 @@ body.mostrarCarrinho .container{
 .listaCarrinho::-webkit-scrollbar{
     width: 0;
 }
-@media only screen and (max-width: 992px) {
-    .listaProdutos{
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
 
-
-
-
-/* mobile */
-@media only screen and (max-width: 768px) {
-    .listaProdutos{
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
 
 
 /*RODAPE*/
 
 
 footer{
-    height: 500px;
+    height: 50vh;
     width: 100%;
     background-color: #003686; 
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 180px;
+    margin-top: 10%;
 }
 
 .rodape{
@@ -345,95 +328,89 @@ footer{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 420px;
+    height: 42vh;
     width: 90%;
 }
 .rodape-cima{
-    height: 150px;
+    height: 15vh;
     width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 5px 0;
-    gap: 100px;
+    margin: 1% 0;
+    gap: 10%;
     
 }
 
 
 #certificado{
-    height: 80px;
-    width: 160px;
-    border: solid 2px black;
-    border-radius: 10px;
+    height: 8vh;
+    width: 9vw;
+    border: solid 0.2vw black;
+    border-radius: 0.7vw;
 }
 .rodape-baixo{
-    height: 300px;
+    height: 30vh;
     width: 85%;
     display: flex;
     justify-content: space-between;
     color: white;
-    margin-top: 15px;
+    margin-top: 1.5vh;
+    font-size: 0.8vw;
 }
 .email{
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-    height: 100px;
-    width: 350px;
-    margin-left: 10px;
-    gap: 5px;
+    height: 10vh;
+    width: 35vw;
+    margin-left: 10%;
+    gap: 5%;
 }
 .email h2{
     color: white;
-    font-size: 18px;
-    height: 18px;
-    width: 430px;
-    margin-bottom: 5px;
+    font-size: 1vw;
+    margin-bottom: 2%;
 }
 .input-email input{
-    height: 35px;
-    width: 345px;
-    border-radius: 8px 0 0 8px;
+    height: 3vh;
+    width: 18vw;
+    border-radius: 1vw 0 0 1vw;
     background-color: white;   
-    font-size: 17px;
+    font-size: 1.5vw;
 }
 .input-email button{
-    height: 39px;
-    width: 77px;
+    height: 3.5vh;
+    width: 7vw;
     text-align: center;
-    border-radius: 0 8px 8px 0;
-    font-size: 15px;
+    border-radius: 0 0.4vw 0.4vw 0;
+    font-size: 1vw;
 }
 .input-email{
     display: flex;
     justify-content: center;
 }
 
-button img{
-    height: 15px;
-    width: 15px;
-}
-
 .linha-rodape{
-    height: 2px;
+    height: 2vh;
     width: 90%;
     background-color: white;
-    margin-top: 5px;
+    margin-top: 0.5vh;
 }
 .pagamento {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    height: 230px;
-    width: 400px;
+    height: 27vh;
+    width: 23vw;
     flex-direction: column;
-    gap: 10px;
+    gap: 2vw;
 }
 #pagamento{
-    height: 80px;
-    width: 130px;
-    border-radius: 12px;
+    height: 8vh;
+    width: 7vw;
+    border-radius: 0.7vw;
 }
 .copyright{
     display: flex;
@@ -442,25 +419,26 @@ button img{
     color: white;
 }
 .rodape-copy{
-    height: 80px;
+    height: 8vh;
     width: 100%;
     background-color: #00196A;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 0.8vw;
 }
 .listaProdutos .item img{
     width: 10vw;
     height: 10vw;
 }
 .redes-sociais{
-    height: 200px;
-    width: 220px;
+    height: 20vh;
+    width: 22vw;
 }
 
 #redeSocial{
-    height: 55px;
-    width: 55px;
+    height: 5vh;
+    width: 4vw;
 }
 
 /*--------------------------------------*/
@@ -468,13 +446,14 @@ button img{
 
 .tabelaCarrinho button{
     background-color: #ffffff;
-    font-size: 20px;
+    font-size: 1.5vw;
     color:#00196A;
-    height: 80px;
+    height: 8vh;
+    width: 15vw;
     text-decoration: none;
     position: relative;
     overflow: hidden;
-    border: #00196A solid 1px;
+    border: #00196A solid 0.1vw;
 }
 
  .tabelaCarrinho button:hover{
@@ -526,15 +505,15 @@ background-size: contain;
 }
 
 .nav-manual .manual-btn, .nav-auto div{
-    border: 1px solid #ffffff;
-    padding: 10px;
+    border: 0.1vw solid #ffffff;
+    padding: 0.5%;
     border-radius: 50%;
     cursor: pointer;
     transition: 0.2s;
 }
 
 .nav-manual .manual-btn:not(:last-child), .nav-auto div:not(:last-child){
-    margin-right: 10px;
+    margin-right: 0.5%;
 }
 
 .nav-manual .manual-btn:hover{
@@ -631,27 +610,32 @@ cover 40%;
     align-items: center;
     z-index: 100;
     position: fixed;
-    right: 25px;
-    top: 30px;
+    right: 5vw;
+    top: 3%;
+    position: fixed;
   }
   
   .theme-switch-wrapper span {
-    margin-right: 10px;
-    font-size: 1rem;
+    position: absolute;
+    width: 10vw;
+    margin-right: 9vw;
+    font-size: 1.5vw;
+    margin-top: 0%;
   }
   
   .toggle-text {
     position: relative;
-    top: -4px;
-    right: 5px;
+    right: 1vw;
     color: var(--on-background);
+ 
   }
+  
   
   .theme-switch {
     display: inline-block;
-    height: 34px;
+    height: 6vh;
     position: relative;
-    width: 60px;
+    width: 6vw;
   }
   
   .theme-switch input {
@@ -671,13 +655,13 @@ cover 40%;
   
   .slider::before {
     background: #fff;
-    bottom: 4px;
+    bottom: 1vh;
     content: "";
-    height: 26px;
-    left: 4px;
+    height: 4vh;
+    left: 0.4vw;
     position: absolute;
     transition: 0.4s;
-    width: 26px;
+    width: 2vw;
   }
   
   input:checked + .slider {
@@ -726,12 +710,12 @@ cover 40%;
 display: flex;
 align-items: center;
 position: relative;
-border: 1px solid #00196A;
+border: 0.1vw solid #00196A;
 background-color: white;
-width: 400px;
-margin:20px auto;
-border-radius: 20px;
-padding: 5px 10px;
+width: 30vw;
+margin:2vh auto;
+border-radius: 2vw;
+padding: 0.5% 1%;
 color: black;
 }
 
@@ -743,7 +727,7 @@ color: black;
 }
 
 #buscaInput{
-    padding: 8px;
+    padding: 0.8%;
     border: none;
     background-color: transparent;
     width: 100%;
@@ -762,9 +746,6 @@ a{
     margin-left: 10%;
     opacity: 20%;
 }
-
-
-
 
 
 
