--- a/paginaProd.css
+++ b/paginaProd.css
@@ -17,23 +17,23 @@ body {
     display: flex;
     align-items: center;
     width: 100%;
-    height: 90px;
+    height: 9vh;
     position: fixed;
     top: 0;
     left: 0;
     transition: .5s;
     z-index: 100;
-    background-color: #00196A;
+    background-color: #003686;
 }
 
 
 
 .navbar img {
     background-color: transparent;
-    margin-top: 16px;
-    margin-left: 90px;
-    width: 160px;
-    height: 50px;  
+    margin-top: 1vw;
+    margin-left: 9vw;
+    width: 10vw;
+    height: 5vh;  
 }
 .banner {
 height: 100vh;
@@ -53,7 +53,7 @@ left: 0;
     justify-content: space-evenly;
     flex-direction: row;
     color: #ffffff;
-    font-size: 23px;
+    font-size: 2vw;
     cursor: pointer;
 }
 .topicos a:hover {
@@ -114,6 +114,12 @@ li{
     height: 48vh;
     width: 75%;
 }
+.especificao li{
+    font-size: 2.30vh;
+}
+.especificao h1{
+    font-size: 4.60vh;
+}
 .imagemProd{
     filter: drop-shadow(0 0 5px rgb(199, 199, 199));
     border-radius: 15px;
@@ -141,13 +147,13 @@ li{
     padding: 2.5vh;
 }
 .infoProd p{
-    font-size: 16px;
+    font-size: 2.30vh;
 }
 .infoProd h1{
-    font-size: 32px;
+    font-size: 4.60vh;
 }
 .infoProd span{
-    font-size: 24px;
+    font-size: 3.453vh;
 }
 
 .precoBtn{
@@ -159,14 +165,17 @@ li{
     gap: 15px;
 }
 .addCarrinho{
-    height: 50px;
-    width: 180px;
+    height: 7.194vh;
+    width: 11.71vw;
     border-radius: 10px;
     font-size: 16px;
     background-color: #00196A;
     color: white;
     border: none;
     cursor: pointer;
+}
+#addCarrinhoText{
+    font-size: 2.30vh;
 }
 .addCarrinho:hover{
     background-color: white;
@@ -179,14 +188,14 @@ li{
 
 
 footer{
-    height: 500px;
+    height: 50vh;
     width: 100%;
     background-color: #003686; 
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 180px;
+    margin-top: 10%;
 }
 
 .rodape{
@@ -194,95 +203,89 @@ footer{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 420px;
+    height: 42vh;
     width: 90%;
 }
 .rodape-cima{
-    height: 150px;
+    height: 15vh;
     width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 5px 0;
-    gap: 100px;
+    margin: 1% 0;
+    gap: 10%;
     
 }
 
 
 #certificado{
-    height: 80px;
-    width: 160px;
-    border: solid 2px black;
-    border-radius: 10px;
+    height: 8vh;
+    width: 9vw;
+    border: solid 0.2vw black;
+    border-radius: 0.7vw;
 }
 .rodape-baixo{
-    height: 300px;
+    height: 30vh;
     width: 85%;
     display: flex;
     justify-content: space-between;
     color: white;
-    margin-top: 15px;
+    margin-top: 1.5vh;
+    font-size: 0.8vw;
 }
 .email{
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-    height: 100px;
-    width: 350px;
-    margin-left: 10px;
-    gap: 5px;
+    height: 10vh;
+    width: 35vw;
+    margin-left: 10%;
+    gap: 5%;
 }
 .email h2{
     color: white;
-    font-size: 18px;
-    height: 18px;
-    width: 430px;
-    margin-bottom: 5px;
+    font-size: 1vw;
+    margin-bottom: 2%;
 }
 .input-email input{
-    height: 35px;
-    width: 345px;
-    border-radius: 8px 0 0 8px;
+    height: 3vh;
+    width: 18vw;    
+    border-radius: 0.4vw 0 0 0.4vw;
     background-color: white;   
-    font-size: 17px;
+    font-size: 1.5vw;
 }
 .input-email button{
-    height: 39px;
-    width: 77px;
+    height: 3.5vh;
+    width: 7vw;
     text-align: center;
-    border-radius: 0 8px 8px 0;
-    font-size: 15px;
+    border-radius: 0 0.4vw 0.4vw 0;
+    font-size: 1vw;
 }
 .input-email{
     display: flex;
     justify-content: center;
 }
 
-button img{
-    height: 15px;
-    width: 15px;
-}
-
 .linha-rodape{
-    height: 2px;
+    height: 2vh;
     width: 90%;
     background-color: white;
-    margin-top: 5px;
+    margin-top: 0.5vh;
 }
 .pagamento {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     flex-wrap: wrap;
-    height: 230px;
-    width: 400px;
+    height: 27vh;
+    width: 23vw;
     flex-direction: column;
-    gap: 10px;
+    gap: 2vw;
 }
 #pagamento{
-    height: 80px;
-    width: 130px;
-    border-radius: 12px;
+    height: 8vh;
+    width: 7vw;
+    border-radius: 0.7vw;
 }
 .copyright{
     display: flex;
@@ -291,26 +294,26 @@ button img{
     color: white;
 }
 .rodape-copy{
-    height: 80px;
+    height: 8vh;
     width: 100%;
     background-color: #00196A;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 0.8vw;
 }
-
+.listaProdutos .item img{
+    width: 10vw;
+    height: 10vw;
+}
 .redes-sociais{
-    height: 200px;
-    width: 220px;
+    height: 20vh;
+    width: 22vw;
 }
 
 #redeSocial{
-    height: 55px;
-    width: 55px;
-}
-.input-email button{ 
-    background-color: #008CBA;  
-    color: #FFF;
+    height: 6.1vh;
+    width: 4vw;
 }
 
 /*BOTÕES DA NAVBAR*/
@@ -346,4 +349,13 @@ button img{
     position: absolute;
     width: 200%; /* Aumenta o tamanho da imagem para o efeito de zoom */
     height: 200%;
+}
+
+
+
+
+
+
+#secret{
+    color: #00196A;
 }
